cargo-patches/turso_sdk_kit/turso.h

typedef enum
{
    TURSO_OK = 0,
    TURSO_DONE = 1,
    TURSO_ROW = 2,
    TURSO_IO = 3,
    TURSO_BUSY = 4,
    TURSO_INTERRUPT = 5,
    TURSO_BUSY_SNAPSHOT = 6,
    TURSO_ERROR = 127,
    TURSO_MISUSE = 128,
    TURSO_CONSTRAINT = 129,
    TURSO_READONLY = 130,
    TURSO_DATABASE_FULL = 131,
    TURSO_NOTADB = 132,
    TURSO_CORRUPT = 133,
    TURSO_IOERR = 134,
} turso_status_code_t;
// enumeration of value types supported by the database
typedef enum
{
    TURSO_TYPE_UNKNOWN = 0,
    TURSO_TYPE_INTEGER = 1,
    TURSO_TYPE_REAL = 2,
    TURSO_TYPE_TEXT = 3,
    TURSO_TYPE_BLOB = 4,
    TURSO_TYPE_NULL = 5,
} turso_type_t;
/// opaque pointer to the TursoDatabase instance
/// SAFETY: the database must be opened and closed only once but can be used concurrently
typedef struct turso_database turso_database_t;
/// opaque pointer to the TursoConnection instance
/// SAFETY: the connection must be used exclusive and can't be accessed concurrently
typedef struct turso_connection turso_connection_t;
/// opaque pointer to the TursoStatement instance
/// SAFETY: the statement must be used exclusive and can't be accessed concurrently
typedef struct turso_statement turso_statement_t;
/** Get the row value at the the index for a current statement state
 * SAFETY: returned pointers will be valid only until next invocation of statement operation (step, finalize, reset, etc)
 * Caller must make sure that any non-owning memory is copied appropriated if it will be used for longer lifetime
 */
turso_type_t turso_statement_row_value_kind(const turso_statement_t *self, size_t index);
/* Get amount of bytes in the BLOB or TEXT values
 * Return -1 for other kinds
 */
int64_t turso_statement_row_value_bytes_count(const turso_statement_t *self, size_t index);
/* Get pointer to the start of the slice  for BLOB or TEXT values
 * Return NULL for other kinds
 */
const char *turso_statement_row_value_bytes_ptr(const turso_statement_t *self, size_t index);
/* Return value of INTEGER kind
 * Return 0 for other kinds
 */
int64_t turso_statement_row_value_int(const turso_statement_t *self, size_t index);
/* Return value of REAL kind
 * Return 0 for other kinds
 */
double turso_statement_row_value_double(const turso_statement_t *self, size_t index);
/** Return named argument position in a statement
    Return positive integer with 1-indexed position if named parameter was found
    Return -1 if parameter was not found
*/
int64_t turso_statement_named_position(
    const turso_statement_t *self,
    /* zero-terminated C string */
    const char *name);
/** Return parameters count for the statement
 * -1 if pointer is invalid
 */
int64_t
turso_statement_parameters_count(const turso_statement_t *self);
/** Bind a positional argument to a statement */
turso_status_code_t
turso_statement_bind_positional_null(const turso_statement_t *self, size_t position);
turso_status_code_t
turso_statement_bind_positional_int(const turso_statement_t *self, size_t position, int64_t value);
turso_status_code_t
turso_statement_bind_positional_double(const turso_statement_t *self, size_t position, double value);
turso_status_code_t
turso_statement_bind_positional_blob(
    const turso_statement_t *self,
    size_t position,
    /* pointer to the start of BLOB slice */
    const char *ptr,
    /* length of BLOB slice */
    size_t len);
turso_status_code_t
turso_statement_bind_positional_text(
    const turso_statement_t *self,
    size_t position,
    /* pointer to the start of TEXT slice */
    const char *ptr,
    /* length of TEXT slice */
    size_t len);
/** Deallocate C string allocated by Turso */
void turso_str_deinit(const char *self);
/** Deallocate and close a database
 * SAFETY: caller must ensure that no other code can concurrently or later call methods over deinited database
 */
void turso_database_deinit(const turso_database_t *self);
/** Deallocate and close a connection
 * SAFETY: caller must ensure that no other code can concurrently or later call methods over deinited connection
 */
void turso_connection_deinit(const turso_connection_t *self);
/** Deallocate and close a statement
 * SAFETY: caller must ensure that no other code can concurrently or later call methods over deinited statement
 */
void turso_statement_deinit(const turso_statement_t *self);