cargo-patches/turso_sdk_kit/src/bindings.rs

unsafe extern "C" {
    #[doc = " Get the row value at the the index for a current statement state\n SAFETY: returned pointers will be valid only until next invocation of statement operation (step, finalize, reset, etc)\n Caller must make sure that any non-owning memory is copied appropriated if it will be used for longer lifetime"]
    pub fn turso_statement_row_value_kind(
        self_: *const turso_statement_t,
        index: usize,
    ) -> turso_type_t;
}
unsafe extern "C" {
    pub fn turso_statement_row_value_bytes_count(
        self_: *const turso_statement_t,
        index: usize,
    ) -> i64;
}
unsafe extern "C" {
    pub fn turso_statement_row_value_bytes_ptr(
        self_: *const turso_statement_t,
        index: usize,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn turso_statement_row_value_int(self_: *const turso_statement_t, index: usize) -> i64;
}
unsafe extern "C" {
    pub fn turso_statement_row_value_double(self_: *const turso_statement_t, index: usize) -> f64;
}
unsafe extern "C" {
    #[doc = " Return named argument position in a statement\nReturn positive integer with 1-indexed position if named parameter was found\nReturn -1 if parameter was not found"]
    pub fn turso_statement_named_position(
        self_: *const turso_statement_t,
        name: *const ::std::os::raw::c_char,
    ) -> i64;
}
unsafe extern "C" {
    #[doc = " Return parameters count for the statement\n -1 if pointer is invalid"]
    pub fn turso_statement_parameters_count(self_: *const turso_statement_t) -> i64;
}
unsafe extern "C" {
    #[doc = " Return the name of the parameter at 1-based index, including the SQL prefix.\nReturns NULL for positional-only parameters or out-of-range indices.\nThe caller must free the returned string with turso_str_deinit."]
    pub fn turso_statement_parameter_name(
        self_: *const turso_statement_t,
        index: i64,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    #[doc = " Bind a positional argument to a statement"]
    pub fn turso_statement_bind_positional_null(
        self_: *const turso_statement_t,
        position: usize,
    ) -> turso_status_code_t;
}
unsafe extern "C" {
    pub fn turso_statement_bind_positional_int(
        self_: *const turso_statement_t,
        position: usize,
        value: i64,
    ) -> turso_status_code_t;
}
unsafe extern "C" {
    pub fn turso_statement_bind_positional_double(
        self_: *const turso_statement_t,
        position: usize,
        value: f64,
    ) -> turso_status_code_t;
}
unsafe extern "C" {
    pub fn turso_statement_bind_positional_blob(
        self_: *const turso_statement_t,
        position: usize,
        ptr: *const ::std::os::raw::c_char,
        len: usize,
    ) -> turso_status_code_t;
}
unsafe extern "C" {
    pub fn turso_statement_bind_positional_text(
        self_: *const turso_statement_t,
        position: usize,
        ptr: *const ::std::os::raw::c_char,
        len: usize,
    ) -> turso_status_code_t;
}
unsafe extern "C" {
    #[doc = " Deallocate C string allocated by Turso"]
    pub fn turso_str_deinit(self_: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    #[doc = " Deallocate and close a database\n SAFETY: caller must ensure that no other code can concurrently or later call methods over deinited database"]
    pub fn turso_database_deinit(self_: *const turso_database_t);
}
unsafe extern "C" {
    #[doc = " Deallocate and close a connection\n SAFETY: caller must ensure that no other code can concurrently or later call methods over deinited connection"]
    pub fn turso_connection_deinit(self_: *const turso_connection_t);
}
unsafe extern "C" {
    #[doc = " Deallocate and close a statement\n SAFETY: caller must ensure that no other code can concurrently or later call methods over deinited statement"]
    pub fn turso_statement_deinit(self_: *const turso_statement_t);
}
